--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 				<!-- About Section -->
 				<section class="blurb">
 					<h2>À propos</h2>
-					<p>Je suis [Votre Nom], un(e) passionné(e) par [votre domaine]. Ce site a pour but de partager mes projets, expériences et apprentissages avec le monde.</p>
+					<p> Ce site a pour but de partager mes projets, expériences et apprentissages avec le monde.</p>
 					<ul class="actions">
 						
 					</ul>
